# iris

./: pyproject.toml
models/: iris-knn_model.pck  iris-logistic_regression_model.pck  iris-svm_model.pck  iris-tree_model.pck
notebooks/: client.ipynb  iris.ipynb
tasca3_iris/: iris_predict_app.py  iris_predict_service.py
tests/: load_model_test.py
