[tool.poetry]
name = "tasca3-iris"
version = "0.1.0"
description = ""
authors = ["anubisuke <anubisuke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
flask = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
